@@ -34,6 +34,7 @@
 #include "Cluster/ClusterFeature.h"
 #include "Cluster/ClusterInfo.h"
 #include "Cluster/ServerState.h"
+#include "RestServer/DatabaseFeature.h"
 #include "Utilities/NameValidator.h"
 #include "VocBase/LogicalCollection.h"
 #include "VocBase/ticks.h"
@@ -47,6 +48,8 @@
 #include <limits>
 #include <string>
 #include <string_view>
+
+#include "Logger/LogMacros.h"
 
 using namespace arangodb;
 using namespace arangodb::basics;
@@ -193,7 +196,8 @@ enum class GeneratorType : int {
   kTraditional = 1,
   kAutoincrement = 2,
   kUuid = 3,
-  kPadded = 4
+  kPadded = 4,
+  kUpgrade = 5
 };
 
 /// @brief for older compilers
@@ -672,12 +676,45 @@ class UuidKeyGenerator final : public KeyGenerator {
   boost::uuids::random_generator _uuid;
 };
 
+/// @brief upgrade key generator;
+//
+//  This generator is created if a DBServer is upgrading
+//  the database;
+//  If any code tries generating a key this crashes the process, as
+//  database upgrades are strictly a dbserver-local process and hence
+//  must not rely on any cluster-global state!
+//
+class UpgradeKeyGenerator final : public KeyGenerator {
+ public:
+  /// @brief create the generator
+  explicit UpgradeKeyGenerator(LogicalCollection const& collection)
+      : KeyGenerator(collection, false) {}
+
+  bool hasDynamicState() const noexcept override { return false; }
+
+  /// @brief generate a key; crashes in all cases
+  std::string generate(velocypack::Slice /*input*/) override {
+    ADB_PROD_CRASH()
+        << "tried generating a cluster-wide unique-key during database upgrade";
+    return "upgradekey";
+  }
+
+  /// @brief track usage of a key
+  void track(std::string_view /*key*/) noexcept override {}
+
+  void toVelocyPack(velocypack::Builder& builder) const override {
+    KeyGenerator::toVelocyPack(builder);
+    builder.add("type", VPackValue("upgrade"));
+  }
+};
+
 /// @brief all generators, by name
 std::unordered_map<std::string, GeneratorType> const generatorNames = {
     {"traditional", GeneratorType::kTraditional},
     {"autoincrement", GeneratorType::kAutoincrement},
     {"uuid", GeneratorType::kUuid},
-    {"padded", GeneratorType::kPadded}};
+    {"padded", GeneratorType::kPadded},
+    {"upgrade", GeneratorType::kUpgrade}};
 
 /// @brief get the generator type from VelocyPack
 GeneratorType generatorType(VPackSlice parameters) {
@@ -732,12 +769,18 @@ std::unordered_map<GeneratorMapType,
           // In these cases we have to generate a key using a cluster-wide
           // unique identifier, so we use the "Coordinator" key generator
           // also on DBServers.
-          auto& ci = collection.vocbase()
-                         .server()
-                         .getFeature<ClusterFeature>()
-                         .clusterInfo();
-          return std::make_unique<TraditionalKeyGeneratorCoordinator>(
-              ci, collection, allowUserKeys);
+
+          auto const& server = collection.vocbase().server();
+
+          auto const upgrading = server.getFeature<DatabaseFeature>().upgrade();
+          if (upgrading) {
+            return std::make_unique<UpgradeKeyGenerator>(collection);
+          } else {
+            auto& ci = server.getFeature<ClusterFeature>().clusterInfo();
+
+            return std::make_unique<TraditionalKeyGeneratorCoordinator>(
+                ci, collection, allowUserKeys);
+          }
         }
         return std::make_unique<TraditionalKeyGeneratorSingle>(
             collection, allowUserKeys, ::readLastValue(options));
@@ -830,15 +873,25 @@ std::unordered_map<GeneratorMapType,
           // In these cases we have to generate a key using a cluster-wide
           // unique identifier, so we use the "Coordinator" key generator
           // also on DBServers.
-          auto& ci = collection.vocbase()
-                         .server()
-                         .getFeature<ClusterFeature>()
-                         .clusterInfo();
-          return std::make_unique<PaddedKeyGeneratorCoordinator>(
-              ci, collection, allowUserKeys, ::readLastValue(options));
+          auto const& server = collection.vocbase().server();
+
+          auto const upgrading = server.getFeature<DatabaseFeature>().upgrade();
+          if (upgrading) {
+            return std::make_unique<UpgradeKeyGenerator>(collection);
+          } else {
+            auto& ci = server.getFeature<ClusterFeature>().clusterInfo();
+
+            return std::make_unique<PaddedKeyGeneratorCoordinator>(
+                ci, collection, allowUserKeys, ::readLastValue(options));
+          }
         }
         return std::make_unique<PaddedKeyGeneratorSingle>(
             collection, allowUserKeys, ::readLastValue(options));
+      }},
+     {static_cast<GeneratorMapType>(GeneratorType::kUpgrade),
+      [](LogicalCollection const& collection,
+         VPackSlice options) -> std::unique_ptr<UpgradeKeyGenerator> {
+        return std::make_unique<UpgradeKeyGenerator>(collection);
       }}};
 
 }  // namespace
@@ -1004,7 +1057,6 @@ std::unique_ptr<KeyGenerator> KeyGeneratorHelper::createKeyGenerator(
   // if necessary
   return createEnterpriseKeyGenerator(std::move(generator));
 }
-
 #ifndef USE_ENTERPRISE
 
 std::unique_ptr<KeyGenerator> KeyGeneratorHelper::createEnterpriseKeyGenerator(
