@@ -1,6 +1,11 @@
 3.12.5.3 (XXXX-XX-XX)
 ---------------------
 
+* Fix BTS-2220: Fix failing autoupgrade of databases in cluster mode.
+  This was caused by key generation now using the cluster key
+  generator on dbservers, which fails during upgrade with a message that
+  the database was shutting down.
+
 * Fix unique _key generation in two cases: AQL INSERT operations in a loop
   without user specified _key in collections with exactly one shard or with
   multiple shard, non-standard sharding and `forceOneShardAttributeValue`.
